// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailsContainer with no clusters renders as expected 1`] = `
<div
  className="clusterDetails"
>
  <div
    className="pf-c-select"
    data-ouia-component-id="OUIA-Generated-Select-typeahead-1"
    data-ouia-component-type="PF4/Select"
    data-ouia-safe={true}
  >
    <div
      className="pf-c-select__toggle pf-m-typeahead"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="pf-c-select__toggle-wrapper"
      >
        <input
          aria-activedescendant={null}
          aria-label="Find cluster"
          autoComplete="off"
          className="pf-c-form-control pf-c-select__toggle-typeahead"
          disabled={false}
          id="pf-select-toggle-id-0-select-typeahead"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Find cluster"
          type="text"
          value=""
        />
      </div>
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        aria-labelledby="cluster-select-id-1 pf-select-toggle-id-0"
        className="pf-c-button pf-c-select__toggle-button pf-m-plain"
        disabled={false}
        id="pf-select-toggle-id-0"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-select__toggle-arrow"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="spacer"
  />
  <div
    className="pf-c-pagination"
    data-ouia-component-id="OUIA-Generated-Pagination-top-1"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe={true}
    id="pagination-options-menu-top-0"
  >
    <div
      className="pf-c-pagination__total-items"
    >
      <b>
        0
         - 
        0
      </b>
       
      of 
      <b>
        0
      </b>
       
      
    </div>
    <div
      className="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          className="pf-c-options-menu__toggle-text"
        >
          <b>
            0
             - 
            0
          </b>
           
          of 
          <b>
            0
          </b>
           
          
        </span>
        <button
          aria-expanded={false}
          aria-label="Items per page"
          className="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe={true}
          disabled={true}
          id="pagination-options-menu-top-toggle-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      className="pf-c-pagination__nav"
    >
      <div
        className="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled={true}
          aria-label="Go to first page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to previous page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          className="pf-c-form-control"
          disabled={true}
          max={0}
          min={1}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="number"
          value={0}
        />
        <span
          aria-hidden="true"
        >
          of 
          0
        </span>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to next page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled={true}
          aria-label="Go to last page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
  <div
    className="spacer"
  />
  <div
    className="pf-c-pagination"
    data-ouia-component-id="OUIA-Generated-Pagination-top-2"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe={true}
    id="pagination-options-menu-bottom-1"
  >
    <div
      className="pf-c-pagination__total-items"
    >
      <b>
        0
         - 
        0
      </b>
       
      of 
      <b>
        0
      </b>
       
      
    </div>
    <div
      className="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          className="pf-c-options-menu__toggle-text"
        >
          <b>
            0
             - 
            0
          </b>
           
          of 
          <b>
            0
          </b>
           
          
        </span>
        <button
          aria-expanded={false}
          aria-label="Items per page"
          className="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe={true}
          disabled={true}
          id="pagination-options-menu-bottom-toggle-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      className="pf-c-pagination__nav"
    >
      <div
        className="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled={true}
          aria-label="Go to first page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-5"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to previous page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-6"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          className="pf-c-form-control"
          disabled={true}
          max={0}
          min={1}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="number"
          value={0}
        />
        <span
          aria-hidden="true"
        >
          of 
          0
        </span>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to next page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-7"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled={true}
          aria-label="Go to last page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-8"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`ClusterDetailsContainer with some clusters renders as expected 1`] = `
<div
  className="clusterDetails"
>
  <div
    className="pf-c-select"
    data-ouia-component-id="OUIA-Generated-Select-typeahead-2"
    data-ouia-component-type="PF4/Select"
    data-ouia-safe={true}
  >
    <div
      className="pf-c-select__toggle pf-m-typeahead"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="pf-c-select__toggle-wrapper"
      >
        <input
          aria-activedescendant={null}
          aria-label="Find cluster"
          autoComplete="off"
          className="pf-c-form-control pf-c-select__toggle-typeahead"
          disabled={false}
          id="pf-select-toggle-id-1-select-typeahead"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Find cluster"
          type="text"
          value=""
        />
      </div>
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        aria-labelledby="cluster-select-id-1 pf-select-toggle-id-1"
        className="pf-c-button pf-c-select__toggle-button pf-m-plain"
        disabled={false}
        id="pf-select-toggle-id-1"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-select__toggle-arrow"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="spacer"
  />
  <div
    className="pf-c-pagination"
    data-ouia-component-id="OUIA-Generated-Pagination-top-3"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe={true}
    id="pagination-options-menu-top-2"
  >
    <div
      className="pf-c-pagination__total-items"
    >
      <b>
        1
         - 
        2
      </b>
       
      of 
      <b>
        2
      </b>
       
      
    </div>
    <div
      className="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          className="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            2
          </b>
           
          of 
          <b>
            2
          </b>
           
          
        </span>
        <button
          aria-expanded={false}
          aria-label="Items per page"
          className="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe={true}
          disabled={false}
          id="pagination-options-menu-top-toggle-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      className="pf-c-pagination__nav"
    >
      <div
        className="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled={true}
          aria-label="Go to first page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-9"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to previous page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-10"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          className="pf-c-form-control"
          disabled={true}
          max={1}
          min={1}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="number"
          value={1}
        />
        <span
          aria-hidden="true"
        >
          of 
          1
        </span>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to next page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-11"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled={true}
          aria-label="Go to last page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-12"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
  <div
    className="spacer"
  />
  <div
    className="clusterDetailItem"
    style={
      Object {
        "border-bottom": "1px solid #D2D2D2",
        "border-top": "1px solid #D2D2D2",
      }
    }
  >
    <div
      className="pf-c-expandable-section"
    >
      <button
        aria-expanded={false}
        className="pf-c-expandable-section__toggle"
        onClick={[Function]}
        type="button"
      >
        <span
          className="pf-c-expandable-section__toggle-icon"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
        <span
          className="pf-c-expandable-section__toggle-text"
        >
          fxiang-eks
        </span>
      </button>
      <div
        className="pf-c-expandable-section__content"
        hidden={true}
      >
        <span
          style={
            Object {
              "color": "#5A6872",
              "display": "block",
              "font-family": "RedHatText",
              "font-size": "12px",
              "line-height": "21px",
              "text-align": "left",
            }
          }
        >
          Namespace: fxiang-eks
        </span>
        <span
          className="label sectionLabel"
          style={
            Object {
              "font-size": "1rem",
              "padding-left": "1rem",
            }
          }
        >
          Details
        </span>
        <div
          className="spacer"
        />
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Name
            :
             
          </span>
          <span
            className="value"
          >
            fxiang-eks
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Namespace
            :
             
          </span>
          <span
            className="value"
          >
            fxiang-eks
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Status
            :
             
          </span>
          <span
            className="value"
          >
            ok
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            CPU
            :
             
          </span>
          <span
            className="value"
          >
            3
            %
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Memory
            :
             
          </span>
          <span
            className="value"
          >
            13
            %
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Created
            :
             
          </span>
          <span
            className="value"
          >
            a month ago
          </span>
        </div>
        <div
          className="spacer"
        />
      </div>
    </div>
    <span
      style={
        Object {
          "color": "#5A6872",
          "display": "block",
          "font-family": "RedHatText",
          "font-size": "12px",
          "line-height": "21px",
          "text-align": "left",
        }
      }
    >
      Namespace: fxiang-eks
    </span>
  </div>
  <div
    className="clusterDetailItem"
    style={
      Object {
        "border-bottom": "1px solid #D2D2D2",
      }
    }
  >
    <div
      className="pf-c-expandable-section"
    >
      <button
        aria-expanded={false}
        className="pf-c-expandable-section__toggle"
        onClick={[Function]}
        type="button"
      >
        <span
          className="pf-c-expandable-section__toggle-icon"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
        <span
          className="pf-c-expandable-section__toggle-text"
        >
          vbirsan1-remote
        </span>
      </button>
      <div
        className="pf-c-expandable-section__content"
        hidden={true}
      >
        <span
          style={
            Object {
              "color": "#5A6872",
              "display": "block",
              "font-family": "RedHatText",
              "font-size": "12px",
              "line-height": "21px",
              "text-align": "left",
            }
          }
        >
          Namespace: vbirsan1-remote
        </span>
        <span
          className="label sectionLabel"
          style={
            Object {
              "font-size": "1rem",
              "padding-left": "1rem",
            }
          }
        >
          Details
        </span>
        <div
          className="spacer"
        />
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Name
            :
             
          </span>
          <span
            className="value"
          >
            vbirsan1-remote
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Namespace
            :
             
          </span>
          <span
            className="value"
          >
            vbirsan1-remote
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="link sectionLabel"
            id="linkForNodeAction"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            Open cluster console
            <svg
              height="8px"
              style={
                Object {
                  "marginLeft": "9px",
                }
              }
              width="11px"
            >
              <use
                className="label-icon"
                href="#diagramIcons_carbonLaunch"
              />
            </svg>
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Status
            :
             
          </span>
          <span
            className="value"
          >
            ok
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            CPU
            :
             
          </span>
          <span
            className="value"
          >
            8
            %
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Memory
            :
             
          </span>
          <span
            className="value"
          >
            4
            %
          </span>
        </div>
        <div
          className="sectionContent borderLeft"
        >
          <span
            className="label sectionLabel"
          >
            Created
            :
             
          </span>
          <span
            className="value"
          >
            15 days ago
          </span>
        </div>
        <div
          className="spacer"
        />
      </div>
    </div>
    <span
      style={
        Object {
          "color": "#5A6872",
          "display": "block",
          "font-family": "RedHatText",
          "font-size": "12px",
          "line-height": "21px",
          "text-align": "left",
        }
      }
    >
      Namespace: vbirsan1-remote
    </span>
  </div>
  <div
    className="pf-c-pagination"
    data-ouia-component-id="OUIA-Generated-Pagination-top-4"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe={true}
    id="pagination-options-menu-bottom-3"
  >
    <div
      className="pf-c-pagination__total-items"
    >
      <b>
        1
         - 
        2
      </b>
       
      of 
      <b>
        2
      </b>
       
      
    </div>
    <div
      className="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          className="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            2
          </b>
           
          of 
          <b>
            2
          </b>
           
          
        </span>
        <button
          aria-expanded={false}
          aria-label="Items per page"
          className="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe={true}
          disabled={false}
          id="pagination-options-menu-bottom-toggle-3"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      className="pf-c-pagination__nav"
    >
      <div
        className="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled={true}
          aria-label="Go to first page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-13"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to previous page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-14"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          className="pf-c-form-control"
          disabled={true}
          max={1}
          min={1}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="number"
          value={1}
        />
        <span
          aria-hidden="true"
        >
          of 
          1
        </span>
      </div>
      <div
        className="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled={true}
          aria-label="Go to next page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-15"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        className="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled={true}
          aria-label="Go to last page"
          className="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-16"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          role={null}
          tabIndex={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;
